--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta property="og:image" content="https://rental-space.net/assets/ogp.png">
     <meta property="og:url" content="https://rental-space.net">
     <meta property="og:type" content="website">
+    <link rel="icon" href="assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
