--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                                 class="fas fa-sticky-note"></i></a>
                         <a href="https://lin.ee/zJbVJdn" target="_blank" rel="noopener" aria-label="LINE"><i
                                 class="fab fa-line"></i></a>
+                        <a href="https://www.youtube.com/@rentalspace_kiku" target="_blank" rel="noopener"
+                            aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="https://open.spotify.com/show/2UJxyxyDQxtVzdUzBfTOhU?si=5a140809e8884232"
+                            target="_blank" rel="noopener" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
                     </div>
                 </div>
             </div>
