feat: サイドバーにYouTubeとSpotifyのリンクを追加し、順番を変更

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                             「失敗しないレンタルスペース運営」のノウハウを惜しみなく発信します。
                         </p>
                         <div class="sns-links-sidebar">
-                            <a href="https://note.com/rentalspace_kiku" target="_blank" rel="noopener"
-                                class="btn-sns note">note</a>
+                            <a href="https://lin.ee/zJbVJdn" target="_blank" rel="noopener"
+                                class="btn-sns line">公式LINE</a>
                             <a href="https://x.com/rentalspace_k" target="_blank" rel="noopener"
                                 class="btn-sns x-twitter">X</a>
                             <a href="https://www.instagram.com/rentalspace_kiku/" target="_blank" rel="noopener"
@@ -179,8 +179,12 @@
                                 class="btn-sns threads">Threads</a>
                             <a href="https://www.tiktok.com/@rental_space_ojisan" target="_blank" rel="noopener"
                                 class="btn-sns tiktok">TikTok</a>
-                            <a href="https://lin.ee/zJbVJdn" target="_blank" rel="noopener"
-                                class="btn-sns line">公式LINE</a>
+                            <a href="https://www.youtube.com/@rentalspace_kiku" target="_blank" rel="noopener"
+                                class="btn-sns youtube">YouTube</a>
+                            <a href="https://open.spotify.com/show/2UJxyxyDQxtVzdUzBfTOhU?si=5a140809e8884232"
+                                target="_blank" rel="noopener" class="btn-sns spotify">Spotify</a>
+                            <a href="https://note.com/rentalspace_kiku" target="_blank" rel="noopener"
+                                class="btn-sns note">note</a>
                         </div>
                     </div>
                 </div>
