Add GA4 (G-CHWF6QKRJ6) to all pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CHWF6QKRJ6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CHWF6QKRJ6');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>レンタルスペースおじさんのブログ - 実践的なノウハウを発信</title>
     <meta name="description" content="レンタルスペース運営歴5年以上、累計21店舗、利益1億円以上のレンタルスペースおじさんが、ダンススタジオ・撮影スタジオなどの運営ノウハウを発信します。">
