--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta property="og:url" content="https://rental-space.net">
     <meta property="og:type" content="website">
     <link rel="icon" href="assets/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
     <link rel="stylesheet" href="style.css?v=1.0.1">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
