Fix SNS icons and add pagination (10 articles per page)

--- a/index.html
+++ b/index.html
@@ -406,9 +406,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="list-footer">
-                            <button class="btn-load-more" onclick="switchCategory('latest', '最新記事')">最新記事一覧に戻る</button>
-                        </div>
+                        <div class="pagination-controls"></div>
                     </div>
 
                     <!-- 脱サラの道のり -->
